# dl-playground

./: .gitignore  README.md
cifar10-gan/: README.md  main.ipynb  pyproject.toml
xor/: README.md  main.py  model.py  pyproject.toml
