[tool.poetry]
name = "cifar10-gan"
version = "0.1.0"
description = ""
authors = ["Jay Cho <jaycho1214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
