[tool.poetry]
name = "xor"
version = "0.1.0"
description = ""
authors = ["Jay Cho <jaycho1214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.5"
torch = "^2.4.0"
matplotlib = "^3.9.2"
prettytable = "^3.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
